# ComputerArchitecture

HW1/src/: CMakeLists.txt  constant.h  container.cpp  container.h  flower.cpp  flower.h  main.cpp  plant.cpp  plant.h  shrub.cpp  shrub.h  tree.cpp  tree.h
HW1/src/tmp/: CMakeCache.txt  HW1  Makefile  cmake_install.cmake
HW1/tests/: run_all_tests.sh
HW1/tests/input/: test2.txt  test4.txt  test5.txt
HW1/tests/output/: test1_out1.txt  test1_out2.txt  test2_out1.txt  test2_out2.txt  test3_out1.txt  test3_out2.txt  test4_out1.txt  test4_out2.txt  test5_out1.txt  test5_out2.txt  test6_out1.txt  test6_out2.txt
HW2/src/: CMakeLists.txt  container.cpp  container.h  flower.cpp  flower.h  main.cpp  plant.cpp  plant.h  rnd.h  shrub.cpp  shrub.h  tree.cpp  tree.h
HW2/tests/: run_all_tests.sh
HW2/tests/input/: test1.txt  test3.txt  test5.txt
HW2/tests/output/: test1_out1.txt  test1_out2.txt  test2_out1.txt  test2_out2.txt  test3_out1.txt  test3_out2.txt  test4_out1.txt  test4_out2.txt  test5_out1.txt  test5_out2.txt  test6_out1.txt  test6_out2.txt
HW3/src/: container.py  extender.py  flower.py  main.py  myRandom.py  shrub.py  tree.py
HW3/tests/: run_all_tests.sh
HW3/tests/input/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt
HW3/tests/output/: test1_out1.txt  test1_out2.txt  test2_out1.txt  test2_out2.txt  test3_out1.txt  (+7 more)
HW5/: README.md
HW5/src/: CMakeLists.txt  hotel.cpp  hotel.h  main.cpp  visitor.cpp  visitor.h
HW5/tests/: run_all_tests.sh  test1_in.txt  test1_out.txt  test2_in.txt  test2_out.txt  test3_in.txt  test3_out.txt  test4_in.txt  test4_out.txt
